--- a/src/app/components/not-shared/currency-item-details/item-info/item-info.component.html
+++ b/src/app/components/not-shared/currency-item-details/item-info/item-info.component.html
@@ -24,19 +24,26 @@
             </div>
         </div>
         <div class="flex mt-2 justify-between w-full">
-            <p class="font-normal text-sm leading-[180%] {{(item?.rialChangeState === 'low') ? 'text-light-red-text dark:text-dark-red-text' : 'text-light-green-text dark:text-dark-green-text'}}">{{(item?.rialChangeState === 'low') ? '-' : '+'}}{{item?.rialChanges}}%</p>
+            @if (item?.faGroupName === 'بازارهای ارزی') {
+                <p class="font-normal text-sm leading-[180%] {{(item?.lastPriceInfo?.dt === 'low') ? 'text-light-red-text dark:text-dark-red-text' : 'text-light-green-text dark:text-dark-green-text'}}">{{(item?.lastPriceInfo?.dt === 'low') ? '-' : '+'}}{{item?.lastPriceInfo?.dp}}%</p>
+            }
+            @else {
+                <p class="font-normal text-sm leading-[180%] {{(item?.rialChangeState === 'low') ? 'text-light-red-text dark:text-dark-red-text' : 'text-light-green-text dark:text-dark-green-text'}}">{{(item?.rialChangeState === 'low') ? '-' : '+'}}{{item?.rialChanges}}%</p>
+            }
             <div class="flex items-center">
-                <p class="dark:text-light-text4 text-dark-text4 text-2xs leading-[180%]">تومان</p>
-                <p class="dark:text-white text-dark text-sm font-normal leading-[180%] ml-1">{{item?.tomanStringPrice}}</p>
+                <p class="dark:text-light-text4 text-dark-text4 text-2xs leading-[180%] {{ item?.faGroupName === 'بازارهای ارزی' ? 'hidden' : '' }}">تومان</p>
+                <p class="dark:text-white text-dark text-sm font-normal leading-[180%] ml-1">{{ item?.faGroupName !== 'بازارهای ارزی' ? item?.tomanStringPrice : item?.lastPriceInfo?.p}}</p>
             </div>
         </div>
-        <div class="flex mt-2 justify-between w-full">
-            <p class="font-normal text-xs leading-[180%] {{(item?.dollarChangeState === 'low') ? 'text-light-red-text dark:text-dark-red-text' : 'text-light-green-text dark:text-dark-green-text'}}">{{(item?.dollarChangeState === 'low') ? '-' : '+'}}{{item?.dollarChanges}}%</p>
-            <div class="flex items-center">
-                <p class="dark:text-light-text4 text-dark-text4 text-xs font-normal leading-[180%]">دلار</p>
-                <p class="dark:text-white text-dark leading-[180%] text-xs font-normal align-middle ml-1">{{item?.dollarStringPrice}}</p>
+        @if (item?.faGroupName !== 'بازارهای ارزی') {
+            <div class="flex mt-2 justify-between w-full">
+                <p class="font-normal text-xs leading-[180%] {{(item?.dollarChangeState === 'low') ? 'text-light-red-text dark:text-dark-red-text' : 'text-light-green-text dark:text-dark-green-text'}}">{{(item?.dollarChangeState === 'low') ? '-' : '+'}}{{item?.dollarChanges}}%</p>
+                <div class="flex items-center">
+                    <p class="dark:text-light-text4 text-dark-text4 text-xs font-normal leading-[180%]">دلار</p>
+                    <p class="dark:text-white text-dark leading-[180%] text-xs font-normal align-middle ml-1">{{item?.dollarStringPrice}}</p>
+                </div>
             </div>
-        </div>
+        }
         <div class="mt-2 justify-between w-full {{item?.unit === 'پوند' ? 'flex' : 'hidden'}}">
             <p class="font-normal text-xs leading-[180%] {{(item?.lastPriceInfo?.dt === 'low') ? 'text-light-red-text dark:text-dark-red-text' : 'text-light-green-text dark:text-dark-green-text'}}">{{(item?.lastPriceInfo?.dt === 'low') ? '-' : '+'}}{{item?.lastPriceInfo?.dp}}%</p>
             <div class="flex items-center">
@@ -49,18 +56,22 @@
     <!-- Desktop -->
     <div class="hidden md:flex flex-col justify-center">
         <div class="flex flex-nowrap leading-[180%] text-base font-medium">
-            <p class="dark:text-white text-dark leading-[180%]">تومان</p>
-            <p class="dark:text-white text-dark mx-4 leading-[180%]">{{item?.tomanStringPrice}}</p>
-            <p class="font-normal mx-4 leading-[180%] {{(item?.rialChangeState === 'low') ? 'text-light-red-text dark:text-dark-red-text' : 'text-light-green-text dark:text-dark-green-text'}}">{{(item?.rialChangeState === 'low') ? '-' : '+'}}{{item?.rialChanges}}%</p>
+            <p class="dark:text-white text-dark leading-[180%] {{ item?.faGroupName === 'بازارهای ارزی' ? 'hidden' : 'block' }}">تومان</p>
+            <p class="dark:text-white text-dark mx-4 leading-[180%]">{{item?.faGroupName === 'بازارهای ارزی' ? item?.lastPriceInfo?.p : item?.tomanStringPrice}}</p>
+            @if (item?.faGroupName === 'بازارهای ارزی') {
+                <p class="font-normal mx-4 leading-[180%] {{(item?.rialChangeState === 'low') ? 'text-light-red-text dark:text-dark-red-text' : 'text-light-green-text dark:text-dark-green-text'}}">{{(item?.rialChangeState === 'low') ? '-' : '+'}}{{item?.lastPriceInfo?.dp}}%</p>
+            }
+            @else { 
+                <p class="font-normal mx-4 leading-[180%] {{(item?.rialChangeState === 'low') ? 'text-light-red-text dark:text-dark-red-text' : 'text-light-green-text dark:text-dark-green-text'}}">{{(item?.lastPriceInfo?.dt === 'low') ? '-' : '+'}}{{item?.rialChanges}}%</p>
+            }
         </div>
 
-        <div class="flex flex-nowrap leading-[180%] text-base font-medium {{item?.unit === 'پوند' ? 'mt-2 items-center' : 'mt-3'}}">
+        <div class="flex flex-nowrap leading-[180%] items-center text-base font-medium {{item?.unit === 'پوند' ? 'mt-2 items-center' : 'mt-3'}} {{item?.faGroupName === 'بازارهای ارزی' ? 'opacity-0' : 'opacity-100'}}">
             <p class="dark:text-light-text4 text-dark-text4 leading-[180%] text-xs align-middle">دلار</p>
             <p class="dark:text-white text-dark mx-4 leading-[180%] text-xs align-middle">{{item?.dollarStringPrice}}</p>
             <p class="font-normal mx-4 leading-[180%] {{(item?.dollarChangeState === 'low') ? 'text-light-red-text dark:text-dark-red-text' : 'text-light-green-text dark:text-dark-green-text'}}">{{(item?.dollarChangeState === 'low') ? '-' : '+'}}{{item?.dollarChanges}}%</p>
-
         </div>
-        <div class="flex-nowrap leading-[180%] text-base font-medium {{item?.unit === 'پوند' ? 'flex mt-1 items-center' : 'hidden'}}">
+        <div class="flex-nowrap leading-[180%] text-base items-center font-medium {{item?.unit === 'پوند' ? 'flex mt-1 items-center' : 'hidden'}}">
             <p class="dark:text-light-text4 text-dark-text4 leading-[180%] text-xs align-middle">پوند</p>
             <p class="dark:text-white text-dark mx-4 leading-[180%] text-xs align-middle">{{item?.lastPriceInfo?.p}}</p>
             <p class="font-normal mx-4 leading-[180%] {{(item?.lastPriceInfo?.dt === 'low') ? 'text-light-red-text dark:text-dark-red-text' : 'text-light-green-text dark:text-dark-green-text'}}">{{(item?.lastPriceInfo?.dt === 'low') ? '-' : '+'}}{{item?.lastPriceInfo?.dp}}%</p>
